--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,13 @@ dependencies {
 }
 
 test {
-    useTestNG()
+    useTestNG()}
+
+task tests(type:Test){
+    useTestNG() {
+        suites 'src/test/resources/testng.xml'
+    }
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
 }
